add submit functionality

--- a/question5/src/index.css
+++ b/question5/src/index.css
@@ -7,17 +7,9 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-label {
-  font-family: KievIt, Arial, Helvetica, sans-serif;
-  width: 10em;
-  display: inline-block;
-  text-align: left;
-}
-
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
+/*remove arrows on number input FF */
+input[type='number'] {
+  -moz-appearance: textfield;
 }
 
 code {
